# ECE_574A_Assignment2

./: .gitignore  CMakeLists.txt  README.md  README.txt
circuits/: 474a_circuit1.txt
scripts/: generate_verilog_files.cmd  generate_verilog_files.sh  project.tcl  update_sources.tcl
src/: CMakeLists.txt  ComponentParser.cpp  ComponentParser.h  CriticalPathCalculator.cpp  CriticalPathCalculator.h  DataManager.cpp  DataManager.h  DataPathGenerator.cpp  DataPathGenerator.h  DataTypes.h  FileParser.cpp  FileParser.h  FileWriter.cpp  FileWriter.h  ImplicitComponentGenerator.cpp  ImplicitComponentGenerator.h  ParserDataManager.cpp  ParserDataManager.h  ParserRegex.h  ParserTypes.h  SADD.v  SCOMP.v  SDEC.v  SINC.v  SMUL.v.txt  SMUX2x1.v  SSHL.v  SSHR.v  SSUB.v.txt  Scircuit1.v.txt  Scircuit2.v.txt  WireParser.cpp  WireParser.h  circuit3.v  circuit4.v  circuit5.v.txt  circuit6.v.txt  mixedcircuit3.v  ucircuit1.v  ucircuit2.v
verilog_files/autogen/: circuit1.v  circuit1_autogen.v  circuit2.v  circuit2_autogen.v  circuit3.v  circuit3_autogen.v  circuit4.v  circuit4_autogen.v  circuit5.v  circuit5_autogen.v  circuit6.v  circuit6_autogen.v  mixedcircuit1.v  mixedcircuit1_autogen.v  mixedcircuit2.v  mixedcircuit2_autogen.v  mixedcircuit3.v  mixedcircuit3_autogen.v  ucircuit1.v  ucircuit1_autogen.v  ucircuit2.v  ucircuit2_autogen.v  ucircuit3.v  ucircuit3_autogen.v
verilog_files/datapath/: ADD.v  COMP.v  DEC.v  DIV.v  INC.v  MOD.v  MUL.v  MUX2x1.v  REG.v  SDEC.v  SDIV.v  SHL.v  SHR.v  SINC.v  SMOD.v  SREG.v  SSHL.v  SUB.v
verilog_files/reference/: circuit1.v  circuit2.v  circuit3.v  circuit4.v  circuit5.v  circuit6.v  mixedcircuit1.v  mixedcircuit2.v  ucircuit1.v  ucircuit2.v  ucircuit3.v
verilog_files/tb/: circuit1_tb.v  circuit2_tb.v  circuit3_tb.v  circuit4_tb.v  circuit5_tb.v  circuit6_tb.v  mixedcircuit1_tb.v  mixedcircuit2_tb.v  mixedcircuit3_tb.v  ucircuit1_tb.v  ucircuit2_tb.v  ucircuit3_tb.v  valid_gen.v
